# atlas

./: Cargo.toml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  commands.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  merge.rs  note.rs  remote.rs  storage.rs  sync.rs  vault.rs
core/tests/: sync.rs
