[workspace]
members = ["core"]
resolver = "2"


[workspace.package]
edition = "2024"
version = "0.0.1"
authors = [
    "Paolo D'Amico <5864173+paolodamico@users.noreply.github.com>",
]
license = "MIT"

[workspace.lints.rust]
missing_docs = "deny"
dead_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
