[package]
name = "atlas-core"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
automerge = "0.10"
thiserror = "2.0.19"
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
