[package]
name = "atlas-core"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
automerge = "0.10"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.229", features = ["derive"] }
thiserror = "2.0.19"
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
